name:                bears
version:             1.0.0
synopsis:            Relational algebra
description:         Please see README.md
homepage:            http://github.com/Gabriel439/Haskell-Bears-Library
license:             BSD3
license-file:        LICENSE
author:              Gabriel Gonzalez
maintainer:          Gabriel439@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bears
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , discrimination
                     , lens-family-core
                     , transformers
  default-language:    Haskell2010

test-suite bears-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bears
                     , doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Gabriel439/Haskell-Bears-Library
